--- a/public/main.css
+++ b/public/main.css
@@ -1,352 +1,1 @@
-*,
-:after,
-:before {
-	box-sizing: border-box;
-}
-:after,
-:before {
-	text-decoration: inherit;
-	vertical-align: inherit;
-}
-html {
-	cursor: default;
-	line-height: 1.5;
-	-moz-tab-size: 4;
-	-o-tab-size: 4;
-	tab-size: 4;
-	-webkit-tap-highlight-color: transparent;
-	-ms-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
-	word-break: break-word;
-}
-body {
-	margin: 0;
-}
-h1 {
-	font-size: 2em;
-	margin: 0.67em 0;
-}
-dl dl,
-dl ol,
-dl ul,
-ol dl,
-ol ol,
-ol ul,
-ul dl,
-ul ol,
-ul ul {
-	margin: 0;
-}
-hr {
-	height: 0;
-	overflow: visible;
-}
-main {
-	display: block;
-}
-nav ol,
-nav ul {
-	list-style: none;
-	padding: 0;
-}
-pre {
-	font-family: monospace, monospace;
-	font-size: 1em;
-}
-a {
-	background-color: transparent;
-}
-abbr[title] {
-	text-decoration: underline;
-	-webkit-text-decoration: underline dotted;
-	text-decoration: underline dotted;
-}
-b,
-strong {
-	font-weight: bolder;
-}
-code,
-kbd,
-samp {
-	font-family: monospace, monospace;
-	font-size: 1em;
-}
-small {
-	font-size: 80%;
-}
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-	vertical-align: middle;
-}
-audio,
-video {
-	display: inline-block;
-}
-audio:not([controls]) {
-	display: none;
-	height: 0;
-}
-iframe,
-img {
-	border-style: none;
-}
-svg:not([fill]) {
-	fill: currentColor;
-}
-svg:not(:root) {
-	overflow: hidden;
-}
-table {
-	border-collapse: collapse;
-}
-button,
-input,
-select {
-	margin: 0;
-}
-button {
-	overflow: visible;
-	text-transform: none;
-}
-[type='button'],
-[type='reset'],
-[type='submit'],
-button {
-	-webkit-appearance: button;
-}
-fieldset {
-	border: 1px solid #a0a0a0;
-	padding: 0.35em 0.75em 0.625em;
-}
-input {
-	overflow: visible;
-}
-legend {
-	color: inherit;
-	display: table;
-	max-width: 100%;
-	white-space: normal;
-}
-progress {
-	display: inline-block;
-	vertical-align: baseline;
-}
-select {
-	text-transform: none;
-}
-textarea {
-	margin: 0;
-	overflow: auto;
-	resize: vertical;
-}
-[type='checkbox'],
-[type='radio'] {
-	padding: 0;
-}
-[type='search'] {
-	-webkit-appearance: textfield;
-	outline-offset: -2px;
-}
-::-webkit-inner-spin-button,
-::-webkit-outer-spin-button {
-	height: auto;
-}
-::-webkit-input-placeholder {
-	color: inherit;
-	opacity: 0.54;
-}
-::-webkit-search-decoration {
-	-webkit-appearance: none;
-}
-::-webkit-file-upload-button {
-	-webkit-appearance: button;
-	font: inherit;
-}
-::-moz-focus-inner {
-	border-style: none;
-	padding: 0;
-}
-:-moz-focusring {
-	outline: 1px dotted ButtonText;
-}
-:-moz-ui-invalid {
-	box-shadow: none;
-}
-details,
-dialog {
-	display: block;
-}
-dialog {
-	background-color: #fff;
-	border: solid;
-	color: #000;
-	height: -moz-fit-content;
-	height: -webkit-fit-content;
-	height: fit-content;
-	left: 0;
-	margin: auto;
-	padding: 1em;
-	position: absolute;
-	right: 0;
-	width: -moz-fit-content;
-	width: -webkit-fit-content;
-	width: fit-content;
-}
-dialog:not([open]) {
-	display: none;
-}
-summary {
-	display: list-item;
-}
-canvas {
-	display: inline-block;
-}
-template {
-	display: none;
-}
-[tabindex],
-a,
-area,
-button,
-input,
-label,
-select,
-summary,
-textarea {
-	touch-action: manipulation;
-}
-[hidden] {
-	display: none;
-}
-[aria-busy='true'] {
-	cursor: progress;
-}
-[aria-controls] {
-	cursor: pointer;
-}
-[aria-disabled='true'],
-[disabled] {
-	cursor: not-allowed;
-}
-[aria-hidden='false'][hidden] {
-	display: inline;
-	display: initial;
-}
-[aria-hidden='false'][hidden]:not(:focus) {
-	clip: rect(0, 0, 0, 0);
-	position: absolute;
-}
-.list-unstyled {
-	list-style: none;
-	padding-left: 0;
-}
-.h-100 {
-	height: 100%;
-}
-a {
-	text-decoration: none;
-}
-figure {
-	margin: 0;
-}
-a,
-figure {
-	display: inline-block;
-}
-body {
-	overflow-x: hidden;
-	-webkit-font-smoothing: antialiased;
-	-webkit-text-size-adjust: 100%;
-	-moz-osx-font-smoothing: grayscale;
-}
-@font-face {
-	font-family: Poppins;
-	src: url(/fonts/subset-Poppins-Regular.woff2) format('woff2'),
-		url(/fonts/subset-Poppins-Regular.woff) format('woff');
-	font-weight: 400;
-	font-style: normal;
-	font-display: swap;
-}
-body,
-input,
-textarea {
-	font-family: Poppins, sans-serif;
-	font-style: normal;
-	font-weight: 400;
-	font-size: 1rem;
-	line-height: 250%;
-	color: #fff;
-	letter-spacing: 0.0125rem;
-}
-a,
-blockquote,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul {
-	margin-top: 0;
-	margin-bottom: 0;
-}
-main {
-	background-color: #5900ff;
-	width: 100%;
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
-main > svg {
-	width: 80%;
-}
-@media (min-width: 768px) {
-	main > svg {
-		width: 50%;
-	}
-}
-.only-mobile {
-	display: none;
-}
-h1 {
-	margin-top: 1rem;
-	font-size: 2rem;
-}
-@media (min-width: 768px) {
-	h1 {
-		margin-top: 2rem;
-		font-size: 3rem;
-	}
-}
-.dark {
-	color: #fff;
-	margin-top: 1.5rem;
-	font-size: 1.3rem;
-	border: 2px solid #fff;
-	border-radius: 6px;
-	padding: 0.5rem 2rem;
-}
-.dark,
-.dark:hover {
-	transition: background-color 0.5s cubic-bezier(0.54, 1.5, 0.38, 1.11);
-}
-.dark:hover {
-	background-color: #fff;
-	color: #5900ff;
-}
-.dark:hover svg path {
-	fill: #5900ff;
-}
-@media (min-width: 768px) {
-	.dark {
-		margin-top: 3rem;
-		font-size: 1.5rem;
-	}
-}
+*,:after,:before{box-sizing:border-box}:after,:before{text-decoration:inherit;vertical-align:inherit}html{cursor:default;line-height:1.5;-moz-tab-size:4;-o-tab-size:4;tab-size:4;-webkit-tap-highlight-color:transparent;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;word-break:break-word}body{margin:0}h1{font-size:2em;margin:.67em 0}dl dl,dl ol,dl ul,ol dl,ol ol,ol ul,ul dl,ul ol,ul ul{margin:0}hr{height:0;overflow:visible}main{display:block}nav ol,nav ul{list-style:none;padding:0}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{text-decoration:underline;-webkit-text-decoration:underline dotted;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}audio,canvas,iframe,img,svg,video{vertical-align:middle}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}iframe,img{border-style:none}svg:not([fill]){fill:currentColor}svg:not(:root){overflow:hidden}table{border-collapse:collapse}button,input,select{margin:0}button{overflow:visible;text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}fieldset{border:1px solid #a0a0a0;padding:.35em .75em .625em}input{overflow:visible}legend{color:inherit;display:table;max-width:100%;white-space:normal}progress{display:inline-block;vertical-align:baseline}select{text-transform:none}textarea{margin:0;overflow:auto;resize:vertical}[type=checkbox],[type=radio]{padding:0}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}::-webkit-inner-spin-button,::-webkit-outer-spin-button{height:auto}::-webkit-input-placeholder{color:inherit;opacity:.54}::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}::-moz-focus-inner{border-style:none;padding:0}:-moz-focusring{outline:1px dotted ButtonText}:-moz-ui-invalid{box-shadow:none}details,dialog{display:block}dialog{background-color:#fff;border:solid;color:#000;height:-moz-fit-content;height:-webkit-fit-content;height:fit-content;left:0;margin:auto;padding:1em;position:absolute;right:0;width:-moz-fit-content;width:-webkit-fit-content;width:fit-content}dialog:not([open]){display:none}summary{display:list-item}canvas{display:inline-block}template{display:none}[tabindex],a,area,button,input,label,select,summary,textarea{touch-action:manipulation}[hidden]{display:none}[aria-busy=true]{cursor:progress}[aria-controls]{cursor:pointer}[aria-disabled=true],[disabled]{cursor:not-allowed}[aria-hidden=false][hidden]{display:inline;display:initial}[aria-hidden=false][hidden]:not(:focus){clip:rect(0,0,0,0);position:absolute}.list-unstyled{list-style:none;padding-left:0}.h-100{height:100%}a{text-decoration:none}figure{margin:0}a,figure{display:inline-block}body{overflow-x:hidden;-webkit-font-smoothing:antialiased;-webkit-text-size-adjust:100%;-moz-osx-font-smoothing:grayscale}@font-face{font-family:Poppins;src:url(/bermaki/fonts/subset-Poppins-Regular.woff2) format("woff2"),url(/bermaki/fonts/subset-Poppins-Regular.woff) format("woff");font-weight:400;font-style:normal;font-display:swap}body,input,textarea{font-family:Poppins,sans-serif;font-style:normal;font-weight:400;font-size:1rem;line-height:250%;color:#fff;letter-spacing:.0125rem}a,blockquote,h1,h2,h3,h4,h5,h6,p,ul{margin-top:0;margin-bottom:0}main{background-color:#5900ff;width:100%;height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center}main>svg{width:80%}@media (min-width:768px){main>svg{width:50%}}.only-mobile{display:none}h1{margin-top:1rem;font-size:2rem}@media (min-width:768px){h1{margin-top:2rem;font-size:3rem}}.dark{color:#fff;margin-top:1.5rem;font-size:1.3rem;border:2px solid #fff;border-radius:6px;padding:.5rem 2rem}.dark,.dark:hover{transition:background-color .5s cubic-bezier(.54,1.5,.38,1.11)}.dark:hover{background-color:#fff;color:#5900ff}.dark:hover svg path{fill:#5900ff}@media (min-width:768px){.dark{margin-top:3rem;font-size:1.5rem}}
